--- a/dashboard/templates/jobs/jobs_base.html
+++ b/dashboard/templates/jobs/jobs_base.html
@@ -6,14 +6,4 @@
 </style>
 {% endblock %}
 
-{% block pagecontent %}
-    <ul class="nav nav-tabs">
-      <li id="tab-jobs" role="presentation"><a href="{% url 'jobs' %}">Predefined Jobs</a></li>
-      <li id="tab-yml-based" role="presentation"><a href="{% url 'jobs-yml-based' %}">YML based Jobs</a></li>
-      <li id="tab-logs" role="presentation"><a href="{% url 'jobs-logs' %}">Inspect Logs</a></li>
-      <li id="tab-archive" role="presentation"><a href="{% url 'jobs-archive' %}">Archive</a></li>
-    </ul>
-    <div style="padding:20px">
-        {% block tabcontent %}{% endblock %}
-</div>
-{% endblock %}
+{% block pagecontent %}{% endblock %}
