--- a/dashboard/templates/jobs/logs.html
+++ b/dashboard/templates/jobs/logs.html
@@ -6,7 +6,7 @@
 </script>
 {% endblock %}
 
-{% block tabcontent %}
+{% block pagecontent %}
 <div class="panel-group" id="accordion">
     {% for log in logs %}
         <div class="panel panel-default">
