--- a/dashboard/templates/jobs/_job_form.html
+++ b/dashboard/templates/jobs/_job_form.html
@@ -136,7 +136,7 @@
           <hr/>
           <div class="row">
               <div class="col-md-12 col-md-offset-0">
-                  <div id="div-job-output" class="panel panel-default text-primary scrollable-panel" style="padding:20px;background:AliceBlue"></div>
+                  <div id="div-job-output" class="panel panel-default text-primary scrollable-panel" style="padding:20px;background:DimGrey;color:white"></div>
               </div>
           </div>
         </div>
