--- a/dashboard/templates/packages/package_view.html
+++ b/dashboard/templates/packages/package_view.html
@@ -83,6 +83,8 @@
           </li>
         </ul>
       </span>
+      <span><a type="button" class="btn btn-default" href="{% url 'jobs-logs-package' package_name %}"data-toggle="tooltip" title="Job logs of {{ package_name }}">
+          <span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> Related Jobs</a></span>
       <br/>
       <br/>
       <span id="span-alerts" class="text-warning pull-right"></span>
