--- a/dashboard/templates/jobs/logs.html
+++ b/dashboard/templates/jobs/logs.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block pagecontent %}
+{% if logs %}
 <div class="panel-group" id="accordion">
     {% for log in logs %}
         <div class="panel panel-default">
@@ -59,4 +60,7 @@
         </div>
     {% endfor %}
 </div>
+{% else %}
+    <h2>No Job Logs <small>here!</small></h2>
+{% endif %}
 {% endblock %}
