--- a/dashboard/templates/packages/_branch_mapping.html
+++ b/dashboard/templates/packages/_branch_mapping.html
@@ -3,7 +3,7 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Branch Mapping</h3>
-    <span class="text-muted">This mapping is basis to comparision of statistics</span>
+    <span class="text-muted">This mapping is basis to comparision of statistics (<i>diff</i>).</span>
   </div>
   <table class="table table-hover table-bordered" cellspacing="0">
     <thead>
