--- a/dashboard/templates/packages/_stats_diff.html
+++ b/dashboard/templates/packages/_stats_diff.html
@@ -2,7 +2,7 @@
 {% if stats_diff %}
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Statistics Differences</h3>
+    <h3 class="panel-title">Differences <small>Out of Sync</small></h3>
     <span class="text-muted">Translation Platform vs Build System</span>
   </div>
   <table class="table table-hover table-bordered" cellspacing="0">
