--- a/dashboard/templates/settings/release_streams.html
+++ b/dashboard/templates/settings/release_streams.html
@@ -35,7 +35,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
           <div class="caption">
-            <h3>{{ relstream.product_name }} <small>{{ relstream.product_build_system }}</small>
+            <h3>{{ relstream.product_name }}
                 {% if relstream.product_status %}
                     <span class="glyphicon glyphicon-ok-circle" style="color:green"></span>
                 {% else %}
@@ -44,6 +44,10 @@
             <p>
                 <a href="{{ relstream.web_url }}" target="_blank">{{ relstream.web_url }}</a>
                 <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+            </p>
+            <p>
+                <span style="color:grey">Build System:</span> {{ relstream.product_build_system|capfirst }}
+                <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
             </p>
             <p>
                 <span style="color:grey">Authentication type:</span> {{ relstream.auth_type|capfirst }}
